test_case/rust-lang_rust/50441_386591451_8.rs
\n\nRust only looks at the signature of the called function, as such it must\nalready specify all requirements that will be used for every type parameter.\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/on-unimplemented/no-debug.rs","byte_start":593,"byte_end":596,"line_start":20,"line_end":20,"column_start":32,"column_end":35,"is_primary":true,"text":[{"text":"    println!(\"{:?} {:?}\", Foo, Bar);","highlight_start":32,"highlight_end":35}],"label":"`no_debug::Bar` cannot be formatted using `{:?}` because it doesn't implement `std::fmt::Debug`","suggested_replacement":null,"expansion":{"span":{"file_name":"<print macros>","byte_start":54,"byte_end":85,"line_start":2,"line_end":2,"column_start":27,"column_end":58,"is_primary":false,"text":[{"text":"$ crate :: io :: _print ( format_args ! ( $ ( $ arg ) * ) ) ) ;","highlight_start":27,"highlight_end":58}],"label":null,"suggested_replacement":null,"expansion":{"span":{"file_name":"<println macros>","byte_start":138,"byte_end":191,"line_start":3,"line_end":3,"column_start":8,"column_end":61,"is_primary":false,"text":[{"text":") => ( print ! ( concat ! ( $ fmt , \"\\n\" ) , $ ( $ arg ) * ) ) ;","highlight_start":8,"highlight_end":61}],"label":null,"suggested_replacement":null,"expansion":{"span":{"file_name":"/checkout/src/test/ui/on-unimplemented/no-debug.rs","byte_start":566,"byte_end":598,"line_start":20,"line_end":20,"column_start":5,"column_end":37,"is_primary":false,"text":[{"text":"    println!(\"{:?} {:?}\", Foo, Bar);","highlight_start":5,"highlight_end":37}],"label":null,"suggested_replacement":null,"expansion":null},"macro_decl_name":"println!","def_site_span":{"file_name":"<println macros>","byte_start":0,"byte_end":195,"line_start":1,"line_end":3,"column_start":1,"column_end":65,"is_primary":false,"text":[{"text":"(  ) => ( print ! ( \"\\n\" ) ) ; ( $ fmt : expr ) => (","highlight_start":1,"highlight_end":53},{"text":"print ! ( concat ! ( $ fmt , \"\\n\" ) ) ) ; ( $ fmt : expr , $ ( $ arg : tt ) *","highlight_start":1,"highlight_end":78},{"text":") => ( print ! ( concat ! ( $ fmt , \"\\n\" ) , $ ( $ arg ) * ) ) ;","highlight_start":1,"highlight_end":65}],"label":null,"suggested_replacement":null,"expansion":null}}},"macro_decl_name":"print!","def_site_span":{"file_name":"<print macros>","byte_start":0,"byte_end":91,"line_start":1,"line_end":2,"column_start":1,"column_end":64,"is_primary":false,"tex  some_func(5i32); // error: the trait bound `i32 : Foo` is not satisfied\n}\n